Add a few dependencies, slight changes